--- a/pages/daily.html
+++ b/pages/daily.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/styles/style.css">
   <title>Frontend Mentor | Time tracking dashboard</title>
 
 </head>
@@ -19,7 +18,7 @@
       <div class="profile">
 
         <div class="img-wrapper">
-          <img src="images/image-jeremy.png" alt="Jeremy's image">
+          <img src="../images/image-jeremy.png" alt="Jeremy's image">
         </div>
 
         <header id="header">
@@ -33,13 +32,13 @@
         <div class="options">
           <ul>
             <li>
-              <a class="tab" href="index.html">Daily</a>
+              <a class="tab active" href="../pages/daily.html">Daily</a>
             </li>
             <li>
-              <a class="tab" href="weekly.html">Weekly</a>
+              <a class="tab" href="../index.html">Weekly</a>
             </li>
             <li>
-              <a class="tab active" href="monthly.html">Monthly</a>
+              <a class="tab" href="../pages/monthly.html">Monthly</a>
             </li>
           </ul>
         </div>
@@ -60,8 +59,8 @@
           </div>
         </div>
         <div class="hours">
-          <h1 id="work-monthly-current"><!-- 103hrs --></h1> <!-- monthly -->
-          <h3 id="work-monthly-previous"><!-- Last Month - 128hrs --></h3> <!-- monthly -->
+          <h1 id="work-daily-current"><!-- 5hrs --></h1> <!-- daily -->
+          <h3 id="work-daily-previous"><!-- Yesterday - 7hrs --></h3> <!-- daily -->
         </div>
       </div>
     </div>
@@ -78,8 +77,8 @@
           </div>
         </div>
         <div class="hours">
-          <h1 id="play-monthly-current"><!-- 23hrs --></h1> <!-- monthly -->
-          <h3 id="play-monthly-previous"><!-- Last Month - 29hrs --></h3> <!-- monthly -->
+          <h1 id="play-daily-current"><!-- 1hr --></h1> <!-- daily -->
+          <h3 id="play-daily-previous"><!-- Yesterday - 2hrs --></h3> <!-- daily -->
         </div>
       </div>
     </div>
@@ -96,8 +95,8 @@
           </div>
         </div>
         <div class="hours">
-          <h1 id="study-monthly-current"><!-- 13hrs --></h1> <!-- monthly -->
-          <h3 id="study-monthly-previous"><!-- Last Month - 19hrs --></h3> <!-- monthly -->
+          <h1 id="study-daily-current"><!-- 0hrs --></h1> <!-- daily -->
+          <h3 id="study-daily-previous"><!-- Yesterday - 1hr --></h3> <!-- daily -->
         </div>
       </div>
     </div>
@@ -114,8 +113,8 @@
           </div>
         </div>
         <div class="hours">
-          <h1 id="exercise-monthly-current"><!-- 11hrs --></h1> <!-- monthly -->
-          <h3 id="exercise-monthly-previous"><!-- Last Month - 18hrs --></h3> <!-- monthly -->
+          <h1 id="exercise-daily-current"><!-- 1hr --></h1> <!-- daily -->
+          <h3 id="exercise-daily-previous"><!-- Yesterday - 1hr --></h3> <!-- daily -->
         </div>
       </div>
     </div>
@@ -132,8 +131,8 @@
           </div>
         </div>
         <div class="hours">
-          <h1 id="social-monthly-current"><!-- 21hrs --></h1> <!-- monthly -->
-          <h3 id="social-monthly-previous"><!-- Last Month - 23hrs --></h3> <!-- monthly -->
+          <h1 id="social-daily-current"><!-- 1hr --></h1> <!-- daily -->
+          <h3 id="social-daily-previous"><!-- Yesterday - 3hrs --></h3> <!-- daily -->
         </div>
       </div>
     </div>
@@ -150,8 +149,8 @@
           </div>
         </div>
         <div class="hours">
-          <h1 id="self-care-monthly-current"><!-- 7hrs --></h1> <!-- monthly -->
-          <h3 id="self-care-monthly-previous"><!-- Last Month - 11hrs --></h3> <!-- monthly -->
+          <h1 id="self-care-daily-current"><!-- 0hrs --></h1> <!-- daily -->
+          <h3 id="self-care-daily-previous"><!-- Yesterday - 1hr --></h3> <!-- daily -->
         </div>
       </div>
     </div>
@@ -164,8 +163,8 @@
     Coded by <a href="https://github.com/">sweetEyesBirb</a>.
   </div>
 
-  <script src="index.js"></script>
-  <script src="monthly.js"></script>
+  <script src="/scripts/index.js"></script>
+  <script src="/scripts/daily.js"></script>
 </body>
 
 </html>
