--- a/pages/monthly.html
+++ b/pages/monthly.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../styles/style.css">
   <title>Frontend Mentor | Time tracking dashboard</title>
 
 </head>
@@ -19,7 +19,7 @@
       <div class="profile">
 
         <div class="img-wrapper">
-          <img src="images/image-jeremy.png" alt="Jeremy's image">
+          <img src="../images/image-jeremy.png" alt="Jeremy's image">
         </div>
 
         <header id="header">
@@ -33,13 +33,13 @@
         <div class="options">
           <ul>
             <li>
-              <a class="tab" href="index.html">Daily</a>
+              <a class="tab" href="/pages/daily.html">Daily</a>
             </li>
             <li>
-              <a class="tab active" href="weekly.html">Weekly</a>
+              <a class="tab" href="../index.html">Weekly</a>
             </li>
             <li>
-              <a class="tab" href="monthly.html">Monthly</a>
+              <a class="tab active" href="/pages/monthly.html">Monthly</a>
             </li>
           </ul>
         </div>
@@ -60,8 +60,8 @@
           </div>
         </div>
         <div class="hours">
-          <h1 id="work-weekly-current"><!-- 32hrs --></h1> <!-- weekly -->
-          <h3 id="work-weekly-previous"><!-- Last Week - 36hrs --></h3> <!-- weekly -->
+          <h1 id="work-monthly-current"><!-- 103hrs --></h1> <!-- monthly -->
+          <h3 id="work-monthly-previous"><!-- Last Month - 128hrs --></h3> <!-- monthly -->
         </div>
       </div>
     </div>
@@ -78,8 +78,8 @@
           </div>
         </div>
         <div class="hours">
-          <h1 id="play-weekly-current"><!-- 10hrs --></h1> <!-- weekly -->
-          <h3 id="play-weekly-previous"><!-- Last Week - 8hrs --></h3> <!-- weekly -->
+          <h1 id="play-monthly-current"><!-- 23hrs --></h1> <!-- monthly -->
+          <h3 id="play-monthly-previous"><!-- Last Month - 29hrs --></h3> <!-- monthly -->
         </div>
       </div>
     </div>
@@ -96,8 +96,8 @@
           </div>
         </div>
         <div class="hours">
-          <h1 id="study-weekly-current"><!-- 4hrs --></h1> <!-- weekly -->
-          <h3 id="study-weekly-previous"><!-- Last Week - 7hrs --></h3> <!-- weekly -->
+          <h1 id="study-monthly-current"><!-- 13hrs --></h1> <!-- monthly -->
+          <h3 id="study-monthly-previous"><!-- Last Month - 19hrs --></h3> <!-- monthly -->
         </div>
       </div>
     </div>
@@ -114,8 +114,8 @@
           </div>
         </div>
         <div class="hours">
-          <h1 id="exercise-weekly-current"><!-- 4hrs --></h1> <!-- weekly -->
-          <h3 id="exercise-weekly-previous"><!-- Last Week - 5hrs --></h3> <!-- weekly -->
+          <h1 id="exercise-monthly-current"><!-- 11hrs --></h1> <!-- monthly -->
+          <h3 id="exercise-monthly-previous"><!-- Last Month - 18hrs --></h3> <!-- monthly -->
         </div>
       </div>
     </div>
@@ -132,8 +132,8 @@
           </div>
         </div>
         <div class="hours">
-          <h1 id="social-weekly-current"><!-- 5hrs --></h1> <!-- weekly -->
-          <h3 id="social-weekly-previous"><!-- Last Week - 10hrs --></h3> <!-- weekly -->
+          <h1 id="social-monthly-current"><!-- 21hrs --></h1> <!-- monthly -->
+          <h3 id="social-monthly-previous"><!-- Last Month - 23hrs --></h3> <!-- monthly -->
         </div>
       </div>
     </div>
@@ -150,8 +150,8 @@
           </div>
         </div>
         <div class="hours">
-          <h1 id="self-care-weekly-current"><!-- 2hrs --></h1> <!-- weekly -->
-          <h3 id="self-care-weekly-previous"><!-- Last Week - 2hrs --></h3> <!-- weekly -->
+          <h1 id="self-care-monthly-current"><!-- 7hrs --></h1> <!-- monthly -->
+          <h3 id="self-care-monthly-previous"><!-- Last Month - 11hrs --></h3> <!-- monthly -->
         </div>
       </div>
     </div>
@@ -164,8 +164,8 @@
     Coded by <a href="https://github.com/">sweetEyesBirb</a>.
   </div>
 
-  <script src="index.js"></script>
-  <script src="weekly.js"></script>
+  <script src="../scripts/index.js"></script>
+  <script src="../scripts/monthly.js"></script>
 </body>
 
 </html>
