added some semantic HTML

--- a/pages/monthly.html
+++ b/pages/monthly.html
@@ -12,157 +12,163 @@
 </head>
 
 <body>
-  <div class="cards-container">
 
-    <div class="profile-card-container card ">
+  <main>
 
-      <div class="profile">
+    <div class="cards-container">
 
-        <div class="img-wrapper">
-          <img src="../images/image-jeremy.png" alt="Jeremy's image">
+      <div class="profile-card-container card ">
+
+        <div class="profile">
+
+          <div class="img-wrapper">
+            <img src="../images/image-jeremy.png" alt="Jeremy's image">
+          </div>
+
+          <header id="header">
+            <h4>Report for</h4>
+            <h1 class="name">Jeremy Robson</h1>
+          </header>
+
         </div>
 
-        <header id="header">
-          <h4>Report for</h4>
-          <h1 class="name">Jeremy Robson</h1>
-        </header>
-
-      </div>
-
-      <div class="options-container">
-        <div class="options">
-          <ul>
-            <li>
-              <a class="tab" href="/pages/daily.html">Daily</a>
-            </li>
-            <li>
-              <a class="tab" href="../index.html">Weekly</a>
-            </li>
-            <li>
-              <a class="tab active" href="/pages/monthly.html">Monthly</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-    </div>
-
-
-    <div class="work-card-container card top-cards">
-      <div class="color-box work-color"></div>
-      <div class="info">
-        <div class="activity-header">
-          <h2 class="work-title"><!-- Work --></h2>
-          <div class="more-menu">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
+        <div class="options-container">
+          <div class="options">
+            <ul>
+              <li>
+                <a class="tab" href="/pages/daily.html">Daily</a>
+              </li>
+              <li>
+                <a class="tab" href="../index.html">Weekly</a>
+              </li>
+              <li>
+                <a class="tab active" href="/pages/monthly.html">Monthly</a>
+              </li>
+            </ul>
           </div>
         </div>
-        <div class="hours">
-          <h1 id="work-monthly-current"><!-- 103hrs --></h1> <!-- monthly -->
-          <h3 id="work-monthly-previous"><!-- Last Month - 128hrs --></h3> <!-- monthly -->
-        </div>
-      </div>
-    </div>
 
-    <div class="play-card-container card top-cards">
-      <div class="color-box play-color"></div>
-      <div class="info">
-        <div class="activity-header">
-          <h2 class="play-title"><!-- Play --></h2>
-          <div class="more-menu">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
+      </div>
+
+
+      <div class="work-card-container card top-cards">
+        <div class="color-box work-color"></div>
+        <div class="info">
+          <div class="activity-header">
+            <h2 class="work-title"><!-- Work --></h2>
+            <div class="more-menu">
+              <div class="dot"></div>
+              <div class="dot"></div>
+              <div class="dot"></div>
+            </div>
+          </div>
+          <div class="hours">
+            <h1 id="work-monthly-current"><!-- 103hrs --></h1> <!-- monthly -->
+            <h3 id="work-monthly-previous"><!-- Last Month - 128hrs --></h3> <!-- monthly -->
           </div>
         </div>
-        <div class="hours">
-          <h1 id="play-monthly-current"><!-- 23hrs --></h1> <!-- monthly -->
-          <h3 id="play-monthly-previous"><!-- Last Month - 29hrs --></h3> <!-- monthly -->
-        </div>
       </div>
-    </div>
 
-    <div class="study-card-contaier card top-cards">
-      <div class="color-box study-color"></div>
-      <div class="info">
-        <div class="activity-header">
-          <h2 class="study-title"><!-- Study --></h2>
-          <div class="more-menu">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
+      <div class="play-card-container card top-cards">
+        <div class="color-box play-color"></div>
+        <div class="info">
+          <div class="activity-header">
+            <h2 class="play-title"><!-- Play --></h2>
+            <div class="more-menu">
+              <div class="dot"></div>
+              <div class="dot"></div>
+              <div class="dot"></div>
+            </div>
+          </div>
+          <div class="hours">
+            <h1 id="play-monthly-current"><!-- 23hrs --></h1> <!-- monthly -->
+            <h3 id="play-monthly-previous"><!-- Last Month - 29hrs --></h3> <!-- monthly -->
           </div>
         </div>
-        <div class="hours">
-          <h1 id="study-monthly-current"><!-- 13hrs --></h1> <!-- monthly -->
-          <h3 id="study-monthly-previous"><!-- Last Month - 19hrs --></h3> <!-- monthly -->
-        </div>
       </div>
-    </div>
 
-    <div class="exercise-card-container card bottom-cards">
-      <div class="color-box exercise-color"></div>
-      <div class="info">
-        <div class="activity-header">
-          <h2 class="exercise-title"><!-- Exercise --></h2>
-          <div class="more-menu">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
+      <div class="study-card-contaier card top-cards">
+        <div class="color-box study-color"></div>
+        <div class="info">
+          <div class="activity-header">
+            <h2 class="study-title"><!-- Study --></h2>
+            <div class="more-menu">
+              <div class="dot"></div>
+              <div class="dot"></div>
+              <div class="dot"></div>
+            </div>
+          </div>
+          <div class="hours">
+            <h1 id="study-monthly-current"><!-- 13hrs --></h1> <!-- monthly -->
+            <h3 id="study-monthly-previous"><!-- Last Month - 19hrs --></h3> <!-- monthly -->
           </div>
         </div>
-        <div class="hours">
-          <h1 id="exercise-monthly-current"><!-- 11hrs --></h1> <!-- monthly -->
-          <h3 id="exercise-monthly-previous"><!-- Last Month - 18hrs --></h3> <!-- monthly -->
-        </div>
       </div>
-    </div>
 
-    <div class="social-card-container card bottom-cards">
-      <div class="color-box social-color"></div>
-      <div class="info">
-        <div class="activity-header">
-          <h2 class="social-title"><!-- Social --></h2>
-          <div class="more-menu">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
+      <div class="exercise-card-container card bottom-cards">
+        <div class="color-box exercise-color"></div>
+        <div class="info">
+          <div class="activity-header">
+            <h2 class="exercise-title"><!-- Exercise --></h2>
+            <div class="more-menu">
+              <div class="dot"></div>
+              <div class="dot"></div>
+              <div class="dot"></div>
+            </div>
+          </div>
+          <div class="hours">
+            <h1 id="exercise-monthly-current"><!-- 11hrs --></h1> <!-- monthly -->
+            <h3 id="exercise-monthly-previous"><!-- Last Month - 18hrs --></h3> <!-- monthly -->
           </div>
         </div>
-        <div class="hours">
-          <h1 id="social-monthly-current"><!-- 21hrs --></h1> <!-- monthly -->
-          <h3 id="social-monthly-previous"><!-- Last Month - 23hrs --></h3> <!-- monthly -->
-        </div>
       </div>
-    </div>
 
-    <div class="self-care-card-container card bottom-cards">
-      <div class="color-box self-care-color"></div>
-      <div class="info">
-        <div class="activity-header">
-          <h2 class="self-care-title"><!-- Self Care --></h2>
-          <div class="more-menu">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
+      <div class="social-card-container card bottom-cards">
+        <div class="color-box social-color"></div>
+        <div class="info">
+          <div class="activity-header">
+            <h2 class="social-title"><!-- Social --></h2>
+            <div class="more-menu">
+              <div class="dot"></div>
+              <div class="dot"></div>
+              <div class="dot"></div>
+            </div>
+          </div>
+          <div class="hours">
+            <h1 id="social-monthly-current"><!-- 21hrs --></h1> <!-- monthly -->
+            <h3 id="social-monthly-previous"><!-- Last Month - 23hrs --></h3> <!-- monthly -->
           </div>
         </div>
-        <div class="hours">
-          <h1 id="self-care-monthly-current"><!-- 7hrs --></h1> <!-- monthly -->
-          <h3 id="self-care-monthly-previous"><!-- Last Month - 11hrs --></h3> <!-- monthly -->
+      </div>
+
+      <div class="self-care-card-container card bottom-cards">
+        <div class="color-box self-care-color"></div>
+        <div class="info">
+          <div class="activity-header">
+            <h2 class="self-care-title"><!-- Self Care --></h2>
+            <div class="more-menu">
+              <div class="dot"></div>
+              <div class="dot"></div>
+              <div class="dot"></div>
+            </div>
+          </div>
+          <div class="hours">
+            <h1 id="self-care-monthly-current"><!-- 7hrs --></h1> <!-- monthly -->
+            <h3 id="self-care-monthly-previous"><!-- Last Month - 11hrs --></h3> <!-- monthly -->
+          </div>
         </div>
       </div>
+
     </div>
 
-  </div>
+  </main>
 
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/">sweetEyesBirb</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/">sweetEyesBirb</a>.
+    </div>
+  </footer>
 
   <script src="../scripts/index.js"></script>
   <script src="../scripts/monthly.js"></script>
