--- a/index.html
+++ b/index.html
@@ -161,11 +161,12 @@
     </div>
   </main>
 
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/">sweetEyesBirb</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/">sweetEyesBirb</a>.
+    </div>
+  </footer>
 
   <script src="/scripts/index.js"></script>
   <script src="/scripts/weekly.js"></script>
