changing relative paths 1

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Frontend Mentor | Time tracking dashboard</title>
 
 </head>
@@ -21,7 +21,7 @@
         <div class="profile">
 
           <div class="img-wrapper">
-            <img src="../images/image-jeremy.png" alt="Jeremy's image">
+            <img src="images/image-jeremy.png" alt="Jeremy's image">
           </div>
 
           <header id="header">
@@ -35,13 +35,13 @@
           <div class="options">
             <ul>
               <li>
-                <a class="tab" href="/pages/daily.html">Daily</a>
+                <a class="tab" href="pages/daily.html">Daily</a>
               </li>
               <li>
                 <a class="tab active" href="index.html">Weekly</a>
               </li>
               <li>
-                <a class="tab" href="/pages/monthly.html">Monthly</a>
+                <a class="tab" href="pages/monthly.html">Monthly</a>
               </li>
             </ul>
           </div>
