--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
     </div>
   </footer>
 
-  <script src="/scripts/index.js"></script>
-  <script src="/scripts/weekly.js"></script>
+  <script src="scripts/index.js"></script>
+  <script src="scripts/weekly.js"></script>
 </body>
 
 </html>
