--- a/pages/daily.html
+++ b/pages/daily.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Frontend Mentor | Time tracking dashboard</title>
 
 </head>
@@ -21,7 +21,7 @@
         <div class="profile">
 
           <div class="img-wrapper">
-            <img src="../images/image-jeremy.png" alt="Jeremy's image">
+            <img src="images/image-jeremy.png" alt="Jeremy's image">
           </div>
 
           <header id="header">
@@ -168,8 +168,8 @@
     </div>
   </footer>
 
-  <script src="/scripts/index.js"></script>
-  <script src="/scripts/daily.js"></script>
+  <script src="scripts/index.js"></script>
+  <script src="scripts/daily.js"></script>
 </body>
 
 </html>
