--- a/pages/monthly.html
+++ b/pages/monthly.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Frontend Mentor | Time tracking dashboard</title>
 
 </head>
@@ -22,7 +22,7 @@
         <div class="profile">
 
           <div class="img-wrapper">
-            <img src="../images/image-jeremy.png" alt="Jeremy's image">
+            <img src="images/image-jeremy.png" alt="Jeremy's image">
           </div>
 
           <header id="header">
@@ -170,8 +170,8 @@
     </div>
   </footer>
 
-  <script src="../scripts/index.js"></script>
-  <script src="../scripts/monthly.js"></script>
+  <script src="scripts/index.js"></script>
+  <script src="scripts/monthly.js"></script>
 </body>
 
 </html>
