--- a/pages/monthly.html
+++ b/pages/monthly.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="../styles/style.css">
   <title>Frontend Mentor | Time tracking dashboard</title>
 
 </head>
@@ -22,7 +22,7 @@
         <div class="profile">
 
           <div class="img-wrapper">
-            <img src="images/image-jeremy.png" alt="Jeremy's image">
+            <img src="../images/image-jeremy.png" alt="Jeremy's image">
           </div>
 
           <header id="header">
@@ -36,13 +36,13 @@
           <div class="options">
             <ul>
               <li>
-                <a class="tab" href="/pages/daily.html">Daily</a>
+                <a class="tab" href="daily.html">Daily</a>
               </li>
               <li>
                 <a class="tab" href="../index.html">Weekly</a>
               </li>
               <li>
-                <a class="tab active" href="/pages/monthly.html">Monthly</a>
+                <a class="tab active" href="monthly.html">Monthly</a>
               </li>
             </ul>
           </div>
@@ -170,8 +170,8 @@
     </div>
   </footer>
 
-  <script src="scripts/index.js"></script>
-  <script src="scripts/monthly.js"></script>
+  <script src="../scripts/index.js"></script>
+  <script src="../scripts/monthly.js"></script>
 </body>
 
 </html>
