--- a/pages/daily.html
+++ b/pages/daily.html
@@ -168,8 +168,8 @@
     </div>
   </footer>
 
-  <script src="../scripts/index.js"></script>
-  <script src="../scripts/daily.js"></script>
+  <script src="/scripts/index.js"></script>
+  <script src="/scripts/daily.js"></script>
 </body>
 
 </html>
