removed extensions from links

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
           <div class="options">
             <ul>
               <li>
-                <a class="tab" href="pages/daily.html">Daily</a>
+                <a class="tab" href="pages/daily">Daily</a>
               </li>
               <li>
-                <a class="tab active" href="index.html">Weekly</a>
+                <a class="tab active" href="./">Weekly</a>
               </li>
               <li>
-                <a class="tab" href="pages/monthly.html">Monthly</a>
+                <a class="tab" href="pages/monthly">Monthly</a>
               </li>
             </ul>
           </div>
