--- a/pages/daily.html
+++ b/pages/daily.html
@@ -35,13 +35,13 @@
           <div class="options">
             <ul>
               <li>
-                <a class="tab active" href="daily.html">Daily</a>
+                <a class="tab active" href="daily">Daily</a>
               </li>
               <li>
-                <a class="tab" href="../index.html">Weekly</a>
+                <a class="tab" href="../">Weekly</a>
               </li>
               <li>
-                <a class="tab" href="monthly.html">Monthly</a>
+                <a class="tab" href="monthly">Monthly</a>
               </li>
             </ul>
           </div>
