--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <main>
+  <main role="main">
 
     <div class="cards-container">
 
@@ -20,11 +20,11 @@
 
         <div class="profile">
 
-          <div class="img-wrapper">
+          <div role="img" aria-label="Profile picture" class="img-wrapper">
             <img src="images/image-jeremy.png" alt="Jeremy's image">
           </div>
 
-          <header id="header">
+          <header role="banner" id="header">
             <h4>Report for</h4>
             <h1 class="name">Jeremy Robson</h1>
           </header>
@@ -161,7 +161,7 @@
     </div>
   </main>
 
-  <footer>
+  <footer role="contentinfo">
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://github.com/">sweetEyesBirb</a>.
